--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.5.16",
     "vue-moment": "^3.2.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "js-cookie": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
@@ -31,7 +32,6 @@
     "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
-    "js-cookie": "^2.2.0",
     "node-sass": "^4.8.3",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.13"
