--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.3.4",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "normalize.css": "^8.0.0",
     "nprogress": "^0.2.0",
+    "path-to-regexp": "^3.0.0",
+    "screenfull": "^4.0.0",
     "vue": "^2.5.16",
     "vue-moment": "^3.2.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "js-cookie": "^2.2.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
