--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -36,6 +37,8 @@
     "eslint-plugin-standard": "^2.0.1",
     "node-sass": "^4.8.3",
     "sass-loader": "^7.0.1",
+    "svg-sprite-loader": "^4.1.3",
+    "svgo": "^1.1.1",
     "vue-template-compiler": "^2.5.13"
   },
   "babel": {
