--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "nprogress": "^0.2.0",
     "path-to-regexp": "^3.0.0",
     "screenfull": "^4.0.0",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.5.16",
     "vue-moment": "^3.2.0",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^3.0.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
