--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "clipboard": "^2.0.4",
     "element-ui": "^2.3.4",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
