--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "clipboard": "^2.0.4",
+    "echarts": "4.1.0",
     "element-ui": "^2.3.4",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
@@ -43,14 +44,6 @@
     "svg-sprite-loader": "^4.1.3",
     "svgo": "^1.1.1",
     "vue-template-compiler": "^2.5.13"
-  },
-  "babel": {
-    "presets": [
-      "@vue/app"
-    ],
-    "plugins": [
-      "syntax-dynamic-import"
-    ]
   },
   "eslintConfig": {
     "root": true,
