add environment config

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
-baseUrl = '/api'
-proxyTarget = 'http://localhost/'
+#only variables starting in VUE_APP_ will be available in the app.
+VUE_APP_BASE_URL = '/api'
+VUE_APP_PROXY_TARGET = 'http://localhost/'
