--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.6",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.6",
-    "@vue/cli-service": "^3.0.0-beta.6",
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.3.0",
+    "@vue/cli-service": "^3.3.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
