--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.3",
     "svgo": "^1.1.1",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.13",
+    "webpack-bundle-analyzer": "^3.0.3"
   },
   "eslintConfig": {
     "root": true,
