--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "echarts": "4.1.0",
     "element-ui": "^2.3.4",
     "js-cookie": "^2.2.0",
-    "lodash": "^4.17.5",
+    "lodash": ">=4.17.11",
     "moment": "^2.22.1",
     "normalize.css": "^8.0.0",
     "nprogress": "^0.2.0",
