--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 #only variables starting in VUE_APP_ will be available in the app.
 VUE_APP_BASE_URL = '/api'
-VUE_APP_PROXY_TARGET = 'http://localhost:3000/'
+VUE_APP_PROXY_TARGET = 'http://localhost/'
