--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "@riophae/vue-treeselect": "0.0.38",
     "axios": "^0.18.0",
     "clipboard": "^2.0.4",
     "echarts": "4.1.0",
