--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@riophae/vue-treeselect": "0.0.38",
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "clipboard": "^2.0.4",
     "echarts": "4.1.0",
-    "element-ui": "^2.3.4",
+    "element-ui": "^2.6.0",
     "js-cookie": "^2.2.0",
     "lodash": ">=4.17.11",
     "normalize.css": "^8.0.0",
